--- a/src/components/map/map.scss
+++ b/src/components/map/map.scss
@@ -1,23 +1,23 @@
-.mapContainer {
-    width: 100%;
-    height: 400px;
-    margin-top: 20px;
+// .mapContainer {
+//     width: 100%;
+//     height: 400px;
+//     margin-top: 20px;
   
-    .map {
-      width: 100%;
-      height: 100%;
-      border-radius: 10px;
+//     .map {
+//       width: 100%;
+//       height: 100%;
+//       border-radius: 10px;
 
-      .popupContainer{
-        display: flex;
-        gap: 20px;
+//       .popupContainer{
+//         display: flex;
+//         gap: 20px;
       
-        .textContainer{
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-        }
-      }
-    }
-  }
+//         .textContainer{
+//           display: flex;
+//           flex-direction: column;
+//           justify-content: space-between;
+//         }
+//       }
+//     }
+//   }
   
